[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://actors/Invader.gd" type="Script" id=2]
[ext_resource path="res://components/Turrent.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Invader" type="KinematicBody2D"]
rotation = 3.14159
script = ExtResource( 2 )
speed = 1
drop_distance = 16

[node name="Turrent" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -16 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( -16, 0 )

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 16, 0 )

[node name="TopRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="timers" type="Node2D" parent="."]

[node name="DropTimer" type="Timer" parent="timers"]
wait_time = 0.25
one_shot = true

[node name="StarAfterDropTimer" type="Timer" parent="timers"]
wait_time = 0.25
one_shot = true
[connection signal="timeout" from="timers/DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="timeout" from="timers/StarAfterDropTimer" to="." method="_on_StarAfterDropTimer_timeout"]
